<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="home">Home</string>
    <string name="goto_today">"Today"</string>
    <string name="edge_cases_page_title">Edge Cases</string>
    <string name="common_cases_page_title">Common Cases</string>
    <string name="edittext_login_info">This is a sample login page that uses standard EditTexts
        from the UI toolkit. EditTexts are already optimized for autofill so extra autofill-specific
        code is almost never needed.
    </string>
    <string name="navigation_button_edittext_login_label">Sample Login Using EditTexts</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="sync_loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operand_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="element_text">Element</string>
    <string name="item_element_text">This is element #</string>
    <string name="middle">This is the middle!</string>
    <string name="type_a_phone_number">Please enter a number…</string>
    <string name="button_dial_number">Call Number</string>
    <string name="button_pick_contact">Pick Number</string>
    <string name="contacts_activity_placeholder">This a placeholder Activity for a contacts screen.
        This activity is never opened and does not contain any real contact data for
        keeping this sample simple and focused.
    </string>
    <string name="warning_call_phone_permission">This app requires \'call phone\' permission to run</string>
    <string name="waiting_msg">Waiting for message…</string>
    <string name="row_label">Clicked on row</string>
    <string name="one_hundred">100</string>
    <string name="plus">+</string>
    <string name="eight">8</string>
    <string name="zero">0</string>
    <string name="retry">Retry</string>
    <string name="delay">Delay</string>
    <string name="enter_a_valid_email_below">Enter a valid email below:</string>
    <string name="password_than_8_chrs"><![CDATA[password (> than 8 chrs):]]></string>
    <string name="number_between_1_amp_100"><![CDATA[number (between 1 & 100):]]></string>
    <string name="submit">Submit</string>
    <string name="start_simple_polling">Start simple polling</string>
    <string name="start_increasingly_delayed_polling">Start increasingly delayed polling</string>
    <string name="info_about_the_demo_will_show_up_here">Info about the demo will show up here</string>
    <string name="concat">concat</string>
    <string name="concat_eager">concat (eager)</string>
    <string name="merge">merge</string>
    <string name="merge_n_slower_disk">merge (slower disk)</string>
    <string name="merge_n_optimized">merge (optimized)</string>
    <string name="merge_n_optimized_slow_disk">merge (optimized) slow disk</string>
    <string name="start_disk_network_call"><![CDATA[Start disk > network call]]></string>
    <string name="log_contributors_of">Log contributors of:</string>
    <string name="log_with_full_user_info">Log with full User Info:</string>
    <string name="log_user_info">Log User Info:</string>
    <string name="kaushikgopal">kaushikgopal</string>
    <string name="start_operation">Start operation</string>
    <string name="one">1</string>
    <string name="tap">tap!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="start">Start</string>
    <string name="i_amz_btn">I AMZ BTN</string>
    <string name="custom_match_instructions">See CustomMatch.java for valid options or type something ending
        in \"coffee\".
    </string>
    <string name="custom_match_hint">How do you like your coffee?</string>
    <string name="validate">Validate</string>
    <string name="good_choice">Good choice!</string>
    <string name="bad_choice">Bad choice!</string>
    <string name="hello_espresso">Hello Espresso!</string>
    <string name="change_text">Change text</string>
    <string name="type_something">type something…</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="todomvp">TodoMvp</string>
    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>
    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device does not support Camera2 API.</string>
    <string name="random_music_player">RandomMusicPlayer</string>
    <string name="picasso">Picasso</string>
    <string name="record_your_message">Record your message</string>
    <string name="message_recorded">Message recorded</string>
    <string name="review_message">Review message</string>
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card">Mount USB storage</string>
    <string name="min_available">
        <xliff:g id="minutes">%d</xliff:g>
        min available
    </string>
    <string name="sec_available"><xliff:g id="seconds">%d</xliff:g>s available
    </string>
    <string name="accept">Done</string>
    <string name="discard">Discard</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" translatable="false">
        <xliff:g id="format">%02d:%02d</xliff:g>
    </string>
    <string name="audio_db_title_format">
        <xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g>
    </string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access">Can\'t access USB storage.</string>
    <string name="error_app_internal">Internal application error.</string>
    <string name="error_mediadb_new_record">Couldn\'t save recorded audio.</string>
    <string name="start_long_operation">Start long operation</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="blur">Blur</string>
    <string name="emboss">Emboss</string>
    <string name="hue">Hue</string>
    <string name="question_article">LIKE THE ARTICLE?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title1">Cry for a Shadow</string>
    <string name="article1">Many a Beatle fanatic started down the outtake
        road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single
        session that yielded four songs (the other three featured Tony Sheridan with the Beatles
        as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique
        to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul
        McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg,
        Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section
        clubs.
    </string>
    <string name="question_the_song">LIKE THE SONG?</string>
    <string name="open">Open</string>
    <string name="label_proximity">Proximity Sensor: %1$.2f</string>
    <string name="label_light">Light Sensor: %1$.2f</string>
</resources>