<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".threelibs.development.sensors.SensorSurvey">
    <TextView
            android:text="@string/label_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_light" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/label_proximity"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/label_proximity" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/label_light"/>
    <ScrollView
            android:layout_width="368dp"
            android:layout_height="485dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/label_proximity" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        <TextView
                android:text="@string/placeholder_message"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sensor_list"/>
    </ScrollView>


    <!-- If the list of sensors is long, the ScrollView enables the user to scroll. -->



</androidx.constraintlayout.widget.ConstraintLayout>