<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    <fragment
            android:id="@+id/fragment"
            android:layout_width="0dp"
            android:name="com.android.home.development.fragments.SimpleFragment"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:layout="@layout/fragment_simple"
              />
    -->

    <FrameLayout
            android:id="@+id/fragment_container"
            android:name="SimpleFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_simple"/>

    <Button
            android:id="@+id/open_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/open"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_left_margin"
            android:layout_marginStart="@dimen/image_left_margin"
            android:layout_marginTop="@dimen/body_top_margin"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/beatles_anthology_box"/>

    <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:text="@string/title1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/standard_margin">

        <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="288dp"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>